modification of Firefox and Chrome buttons

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         browser tab and see your sites load instantly. Try it for free.    
       </div>
       <div class="hero__buttons">
-        <div class="btn chrome__btn">Get it on Chrome</div>
-        <div class="btn firefox__btn">Get it on Firefox</div>
+        <button class="btn chrome__btn">Get it on Chrome</button>
+        <button class="btn firefox__btn">Get it on Firefox</button>
       </div>
     </div>
   </div>
